# symboli

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/: ast.h  builtins.h  eval.h  parser.h  types.h  vm.h
source/: builtins.c  compiler.c  main.c  parser.c  types.c  vm.c
